# BazBeans

./: .gitignore  AGENT-DEPLOYMENT.md  ARCHITECTURE.md  AUTO-INSTALLATION.md  DEPLOYMENT.md  INSTALL-PYTHON-PACKAGE.md  INSTALL-TROUBLESHOOTING.md  LICENSE  MANIFEST.in  QUICK-START.md  README.md  SETUP-CLI.md  SETUP.md  TROUBLESHOOTING.md  post_install.py  pyproject.toml  requirements.txt  setup.py  setup_cli_command.py  setup_cli_installer.py  test_installation.py
.github/workflows/: ci.yml  publish.yml
examples/: README.md  simple_agent.py  web_server_agent.py
setup/: README.md  bazbeans.yaml  install-macos.sh  install.ps1  install.sh
src/: __init__.py  config.py  control_cli.py  docker_commands.py  ip_resolvers.py  node_agent.py  node_pool.py  pubsub.py
src/bazbeans/: __init__.py  nginx_updater.py  node_agent.py
